--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "navigation-and-sensor-app",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -16,19 +16,22 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-navigation/drawer": "^6.7.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.20",
+    "expo-brightness": "~12.0.1",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.8",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
+    "expo-sensors": "~13.0.9",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "^0.74.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
